B-F Sandbox Full-Backup/src/objects/Status_Update__c.object
<CustomObject>
    <description>Object used to track periodic status report at the Application Work Package level by respective owners</description>
    <fields>
        <fullName>Accomplishment_this_period__c</fullName>
        <label>Accomplished This Period</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Accomplishments_Planned_for_Next_Period__c</fullName>
        <label>Accomplishments Planned for Next Period</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Application_Work_Package__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Application Work Package</label>
        <referenceTo>Work_Package__c</referenceTo>
        <relationshipLabel>Status Update</relationshipLabel>
        <relationshipName>Status_Update</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Items_for_Management_Attention__c</fullName>
        <label>Items for Management Attention</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Period_Ending__c</fullName>
        <label>Period Ending</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Planned_but_not_accomplished__c</fullName>
        <label>Planned But Not Accomplished</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Project_Status__c</fullName>
        <label>Project Status</label>
        <picklist>
            <picklistValues>
                <fullName>On Track</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Off Track</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>At Risk</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <formula>IMAGE( CASE(  Project_Status__c ,
 &quot;On Track&quot;, &quot;/img/samples/light_green.gif&quot;, 
&quot;Off Track&quot;, &quot;/img/samples/light_yellow.gif&quot;, 
&quot;At Risk&quot;, &quot;/img/samples/light_red.gif&quot;, &quot;/s.gif&quot;), &quot;status color&quot;)</formula>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_Package_Name__c</fullName>
        <formula>Application_Work_Package__r.Work_Package_Name__c</formula>
        <label>Work Package Name</label>
        <type>Text</type>
    </fields>
    <label>Status Update</label>
    <nameField>
        <displayFormat>SR-{MM}-{YY}-{00000}</displayFormat>
        <label>Status Tracking #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Status Update</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>